<resources>
    <string name="app_name">Bback Application</string>
    <string name="restaurant_name">Bback Restaurant App</string>
    <string name="hello_text">Hello explore your dream food</string>
    <string name="register_text">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="daily_meal">Daily Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="bback_customer">Bback customer</string>
    <string name="bback_restaurant_gmail_com">bbackrestaurant@gmail.com</string>
    <string name="log_out">Log out</string>
    <string name="search_your_food">Search Your Food!</string>
    <string name="person_account">person_account</string>
    <string name="hello_user">Hello User</string>
    <string name="what_do_you_want">What do you want ?</string>
    <string name="pizza">Pizza</string>
    <string name="product_name">Product Name</string>
    <string name="rating">Rating</string>
    <string name="time_of_product">12:00 - 23:00</string>
    <string name="rating_count">5.0</string>
    <string name="dinner">Dinner</string>
    <string name="description">Description</string>
    <string name="description_description_description">Description Description Description</string>
    <string name="discount">Discount</string>
    <string name="daily_meals">Daily Meals</string>
    <string name="detailed_image">detailed image</string>
    <string name="name">Name</string>
    <string name="_5_0">5.0</string>
    <string name="_1_99">1.99</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_more">view more</string>
    <string name="your_favourite_and_tasty_food_is_here">your favourite and tasty food is here!</string>
    <string name="_10_weekend_delicious_dinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <string name="description_here">Description here</string>
    <string name="make_order">Make Order</string>
    <string name="saving">Saving...</string>
    <string name="upload_data">Upload data</string>
    <string name="upload_dataa">Upload Data</string>
    <string name="upload_image">upload image</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="enter_food_description">Enter Food Description</string>
    <string name="enter_food_price">Enter Food Price</string>
    <string name="enter_food_timing">Enter Food Timing</string>
    <string name="enter_food_rating">Enter Food Rating</string>
    <string name="save">Save</string>
    <string name="error_while_logging_in">Error while Logging in</string>
    <string name="background">background</string>
    <string name="profile">Profile</string>
    <string name="back_button">back button</string>
    <string name="email">Email</string>
    <string name="customer_service">Customer Service</string>
    <string name="phone">Phone</string>
    <string name="_05_433_009">05 433 009</string>
    <string name="dial">DIAL</string>
    <string name="_76_433_009">76 433 009</string>
    <string name="see_location">See location</string>
    <string name="chat">CHAT</string>
    <string name="instagram_page">Instagram Page</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="bback_menu">Bback Menu</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="continue_with">Continue With</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="choose_your_location">Choose Your location</string>
    <string name="choose_location">Choose Location</string>
    <string name="design_by_neatroots">Design By NeatRoots</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_by_enabling_location_services_we_can_offer_personalized_restaurant_recommendations_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="design_by_zaynoun">Design By Zaynoun</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="bback_logo">bback logo</string>
    <string name="bback_admin_dashboard">Bback Admin Dashboard</string>
    <string name="pending_order">Pending Order</string>
    <string name="_20">20</string>
    <string name="completed_order">Completed Order</string>
    <string name="_1000">1000$</string>
    <string name="_50">50</string>
    <string name="add_item">Add item</string>
    <string name="all_item_menu">All Item Menu</string>
    <string name="add_user">Add User</string>
    <string name="order_dispatch">Order dispatch</string>
    <string name="add_user1">ADD USER</string>
    <string name="add_button">Add Button</string>
    <string name="you_cart_is_empty">You Cart is empty</string>
    <string name="your_cart_is_empty">Your Cart is empty</string>
    <string name="pending_items">Pending Items</string>
    <string name="view_order_details">View Order Details</string>
    <string name="accept_order">Accept Order</string>
    <string name="reject_order">Reject Order</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="customer_name">Customer Name</string>
    <string name="payment">Payment</string>
    <string name="not_received">Not Received</string>
    <string name="delivered">Delivered</string>
    <string name="dispatch_orders">Dispatch Orders</string>
    <string name="accept_and_continue">Accept and Continue</string>
    <string name="loading_terms_and_conditions">Loading terms and conditions...</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="settings">Settings</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="logout">Logout</string>
    <string name="display_settings">Display Settings</string>
    <string name="you_are_already_accepted_terms_and_conditions">You are already accepted Terms and Conditions!</string>
    <string name="you_have_already_accepted_terms_and_conditions">you have already accepted Terms and Conditions!</string>
    <string name="send_your_feedback">Send Your feedback</string>
    <string name="notification">Notification</string>
    <string name="complete_checkout">Complete Checkout</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date_mm_yy">Expiry Date (MM/YY)</string>
    <string name="card_number">Card Number</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="enter_image_url">Enter Image Url</string>
    <string name="edit_data">Edit Data</string>
    <string name="order_now">Order Now</string>
    <string name="my_favourite">My Favourite</string>
    <string name="my_favorites">My Favorites</string>
</resources>