<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_baseline_person_24"
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_customer_service"
        android:orderInCategory="100"
        android:title="@string/customer_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/send_your_feedback"
        android:orderInCategory="100"
        android:title="@string/send_your_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/adminDashBoard"
        android:orderInCategory="100"
        android:title="@string/admin_dashboard"
        app:showAsAction="never"
        android:visible="false"/>

</menu>