<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="zaynoun.ul.bbackapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="zaynoun.ul.bbackapplication.ui.dailymeal.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment" />
    <fragment
        android:id="@+id/nav_my_favourites"
        android:name="zaynoun.ul.bbackapplication.ui.MyFavourite.MyFavourite"
        android:label="@string/my_favourite"
        tools:layout="@layout/fragment_my_favourite" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="zaynoun.ul.bbackapplication.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="zaynoun.ul.bbackapplication.ui.Cart.CartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>