<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadHomeItemsActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="@dimen/_20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="@dimen/_20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_20dp"
            android:background="@drawable/lavender_border"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_arrow_back_ios_2_24"
                android:id="@+id/uploadBackArrow"
                android:contentDescription="@string/back_button"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_dataa"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                />
            <EditText
                android:id="@+id/upload_image_url"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/lavender_border"
                android:autofillHints="name"
                android:layout_marginTop="15dp"
                android:padding="16dp"
                android:hint="@string/enter_image_url"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/purple_500"
                tools:ignore="TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/lavender_border"
                android:id="@+id/uploadName"
                android:inputType="text"
                android:autofillHints="name"
                android:layout_marginTop="5dp"
                android:padding="16dp"
                android:hint="@string/enter_food_name"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/purple_500"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/lavender_border"
                android:id="@+id/uploadDescription"
                android:inputType="text"
                android:autofillHints="name"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:hint="@string/enter_food_description"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/purple_500"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/lavender_border"
                android:id="@+id/uploadPrice"
                android:inputType="number"
                android:autofillHints="name"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:hint="@string/enter_food_price"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/purple_500"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/lavender_border"
                android:id="@+id/uploadTiming"
                android:inputType="text"
                android:autofillHints="name"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:hint="@string/enter_food_timing"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/purple_500"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/lavender_border"
                android:id="@+id/uploadRating"
                android:inputType="number"
                android:autofillHints="name"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:hint="@string/enter_food_rating"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"
                android:textColorHint="@color/purple_500"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save"
                android:id="@+id/saveButton"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/_20dp"
                app:cornerRadius="@dimen/_20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>