<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerService">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="@dimen/_20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="@dimen/_20dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20dp"
            android:background="@drawable/lavender_border"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >
            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/backCustomerService"
                android:src="@drawable/baseline_arrow_back_ios_2_24"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/customer_service"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="5dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone"
                    android:layout_marginEnd="10dp"
                    android:padding="16dp"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    />
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@drawable/lavender_border"
                    android:text="@string/_05_433_009"
                    android:id="@+id/phoneone"
                    android:layout_marginTop="15dp"
                    android:padding="16dp"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    /></TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/dial"
                android:id="@+id/DialButton"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/_20dp"
                app:cornerRadius="@dimen/_20dp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="5dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone"
                    android:layout_marginEnd="10dp"
                    android:padding="16dp"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    />
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@drawable/lavender_border"
                    android:text="@string/_76_433_009"
                    android:id="@+id/phonetwo"
                    android:layout_marginTop="15dp"
                    android:padding="16dp"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    /></TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/chat"
                android:id="@+id/ChatButton"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/_20dp"
                app:cornerRadius="@dimen/_20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/instagram_page"
                android:id="@+id/InstagramButton"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/_20dp"
                app:cornerRadius="@dimen/_20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/facebook_page"
                android:id="@+id/FaceBookButton"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/_20dp"
                app:cornerRadius="@dimen/_20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/see_location"
                android:id="@+id/Location"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/_20dp"
                app:cornerRadius="@dimen/_20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/bback_menu"
                android:id="@+id/Menu"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                app:cornerRadius="@dimen/_20dp"/>

        </TableLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>